@@ -1,3 +1,6 @@
+Todd Rinaldo April 7 2011 v0.15_01
+* Default 6th parameter in mmap call to undef since we're defaulting the 5th.
+
 Todd Rinaldo April 4 2011 v0.15
 * cpantesters looks good besides Win32. Waiting for someone from windows
   world to care/submit patch
